[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mockflow"
version = "0.1.0"
description = "Professional-grade financial time series mock data generation"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Conflux ML Engine Team"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Mathematics",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
    "mypy",
    "black",
    "pandas-stubs",
    "types-requests",
]

[project.urls]
Homepage = "https://github.com/stefan-mcf/conflux-ml-engine"
Repository = "https://github.com/stefan-mcf/conflux-ml-engine"
Issues = "https://github.com/stefan-mcf/conflux-ml-engine/issues"

[tool.hatch.build.targets.sdist]
include = [
    "/mockflow",
    "/README.md",
]
exclude = [
    "mockflow/**/__pycache__",
    "mockflow/**/tests",
    "mockflow/**/*.pyc",
    "mockflow/**/.pytest_cache",
]

[tool.hatch.build.targets.wheel]
packages = ["mockflow"]
exclude = [
    "mockflow/**/tests",
    "mockflow/**/__pycache__",
    "mockflow/**/*.pyc",
]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--disable-warnings",
    "-v",
]
markers = [
    "integration: integration tests",
    "contract: API contract validation tests",
    "slow: slow running tests",
]